xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__postfix_index.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"(1, 2)[1]\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v2",
                ),
                var_expr: Spanned {
                    value: Sequence(
                        Sequence {
                            items: [
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: 1..2,
                                        },
                                    ),
                                    span: 1..2,
                                },
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                Integer(
                                                    2,
                                                ),
                                            ),
                                            span: 4..5,
                                        },
                                    ),
                                    span: 4..5,
                                },
                            ],
                        },
                    ),
                    span: 0..5,
                },
                return_expr: Spanned {
                    value: Filter(
                        Filter {
                            context_names: ContextNames {
                                item: Name(
                                    "v3",
                                ),
                                position: Name(
                                    "v4",
                                ),
                                last: Name(
                                    "v5",
                                ),
                            },
                            var_atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v2",
                                    ),
                                ),
                                span: 0..5,
                            },
                            return_expr: Spanned {
                                value: Atom(
                                    Spanned {
                                        value: Const(
                                            Integer(
                                                1,
                                            ),
                                        ),
                                        span: 7..8,
                                    },
                                ),
                                span: 7..8,
                            },
                        },
                    ),
                    span: 7..8,
                },
            },
        ),
        span: 7..8,
    },
)
